--- a/source/gui_basis/CMakeLists.txt
+++ b/source/gui_basis/CMakeLists.txt
@@ -2,18 +2,20 @@
 ######################################################################################
 
 file(GLOB PRIVATE_HEADERS *.h)
+file(GLOB PUBLIC_HEADERS ${CMAKE_SOURCE_DIR}/include/gui_basis/*.h)
 file(GLOB SOURCES *.cpp)
 file(GLOB FORM_FILES *.ui)
 
 list(SORT PRIVATE_HEADERS)
+list(SORT PUBLIC_HEADERS)
 list(SORT SOURCES)
 
 
-qt5_wrap_cpp(MOC_OUT ${PRIVATE_HEADERS})
+qt5_wrap_cpp(MOC_OUT ${PUBLIC_HEADERS} )
 qt5_wrap_ui(UI_OUT ${FORM_FILES})
 
 
-add_library(gui_basis SHARED ${_WIN32} ${PRIVATE_HEADERS} ${SOURCES} ${MOC_OUT} ${UI_OUT}) 
+add_library(gui_basis SHARED ${_WIN32} ${PRIVATE_HEADERS} ${PUBLIC_HEADERS} ${SOURCES} ${MOC_OUT} ${UI_OUT}) 
 ##set_executable_output_postfix( gui_basis)
 #set_version_and_label( ${CURRENT_LIBRARY_NAME} )
 set_target_properties( gui_basis PROPERTIES 
