--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,7 @@ include(find_dependencies)
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_subdirectory( "source/run" "source/run" ) #Library's location
-add_subdirectory( "source/kernel" "source/kernel" ) #Library's location
+add_subdirectory( "source/basis/base_kernel_impl" "source/basis/base_kernel_impl" ) #Library's location
 add_subdirectory( "source/gui_basis" "source/gui_basis" ) #Library's location
 ###################################################################
 ## determine if we are compiling for a 32bit or 64bit system
