Стутура поектов движка

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,9 +88,12 @@ include(find_dependencies)
 
 include_directories(${CMAKE_SOURCE_DIR}/include)
 
-add_subdirectory( "source/run" "source/run" ) #Library's location
+add_subdirectory( "source/main" "source/main" ) #Library's location
 add_subdirectory( "source/basis/base_kernel_impl" "source/basis/base_kernel_impl" ) #Library's location
 add_subdirectory( "source/gui_basis" "source/gui_basis" ) #Library's location
+
+add_subdirectory( "source/render/engine" "source/render/engine" ) #Library's location
+add_subdirectory( "source/render/extern/glew" "source/render/extern/glew" ) #Library's location
 ###################################################################
 ## determine if we are compiling for a 32bit or 64bit system
 ## it's did not work ???
