--- a/source/main/CMakeLists.txt
+++ b/source/main/CMakeLists.txt
@@ -23,10 +23,10 @@ if(MSVC)
    set(_WIN32 "WIN32")
 endif()
 
-add_executable(run ${_WIN32} ${PRIVATE_HEADERS} ${SOURCES} ${MOC_OUT} ${UI_OUT}) 
+add_executable(main ${_WIN32} ${PRIVATE_HEADERS} ${SOURCES} ${MOC_OUT} ${UI_OUT}) 
 ##set_executable_output_postfix( my_project)
 #set_version_and_label( ${CURRENT_LIBRARY_NAME} )
-set_target_properties( run PROPERTIES 
+set_target_properties( main PROPERTIES 
                        COMPILE_FLAGS "${ADDITION_COMPILE_FLAGS}"
                        LINK_FLAGS "${ADDITION_LINK_FLAGS}"
                        ENABLE_EXPORTS FALSE
@@ -37,4 +37,4 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR})
 message(Qt5Widgets_LIBRARIES ": ${Qt5Widgets_LIBRARIES}")
 set(LIBRARIES ${Qt5Widgets_LIBRARIES} gui_basis kernel)
 
-target_link_libraries(run ${LIBRARIES})
+target_link_libraries(main ${LIBRARIES})
