--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,9 @@ add_subdirectory( "source/gui_basis" "source/gui_basis" ) #Library's location
 
 add_subdirectory( "source/render/engine" "source/render/engine" ) #Library's location
 add_subdirectory( "source/render/extern/glew" "source/render/extern/glew" ) #Library's location
-add_subdirectory( "source/test/" "source/test/" ) #Library's location
+add_subdirectory( "source/tests/test_signals" "source/tests/test_signals" ) #Library's location
+add_subdirectory( "source/tests/test_event_manager" "source/tests/test_event_manager" ) #Library's location
+
 ###################################################################
 ## determine if we are compiling for a 32bit or 64bit system
 ## it's did not work ???
