--- a/source/main/CMakeLists.txt
+++ b/source/main/CMakeLists.txt
@@ -35,6 +35,6 @@ set_target_properties( main PROPERTIES
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 
 message(Qt5Widgets_LIBRARIES ": ${Qt5Widgets_LIBRARIES}")
-set(LIBRARIES ${Qt5Widgets_LIBRARIES} gui_basis kernel)
+set(LIBRARIES ${Qt5Widgets_LIBRARIES} gui_basis kernel system)
 
 target_link_libraries(main ${LIBRARIES})
