--- a/source/tests/test_signals/CMakeLists.txt
+++ b/source/tests/test_signals/CMakeLists.txt
@@ -17,10 +17,10 @@ list(SORT SOURCES)
 #   set(_WIN32 "WIN32")
 #endif()
 
-add_executable(test ${_WIN32} ${PRIVATE_HEADERS} ${SOURCES}) 
+add_executable(test_signals ${_WIN32} ${PRIVATE_HEADERS} ${SOURCES}) 
 ##set_executable_output_postfix( my_project)
 #set_version_and_label( ${CURRENT_LIBRARY_NAME} )
-set_target_properties( test PROPERTIES 
+set_target_properties( test_signals PROPERTIES 
                        COMPILE_FLAGS "${ADDITION_COMPILE_FLAGS}"
                        LINK_FLAGS "${ADDITION_LINK_FLAGS}"
                        ENABLE_EXPORTS FALSE
