--- a/source/render/engine/CMakeLists.txt
+++ b/source/render/engine/CMakeLists.txt
@@ -26,4 +26,4 @@ set_target_properties( engine PROPERTIES
 #message(Qt5Widgets_LIBRARIES ": ${Qt5Widgets_LIBRARIES}")
 set(LIBRARIES glew )
 
-target_link_libraries(kernel ${LIBRARIES})
+target_link_libraries(engine ${LIBRARIES})
